--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,14 @@
 			<artifactId>primefaces</artifactId>
 			<version>6.0</version>
 		</dependency>
-
+		
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>javax.mail-api</artifactId>
+		    <version>1.5.4</version>
+		</dependency>
+		
         <!-- Annotation processor to generate the JPA 2.0 metamodel classes for
             typesafe criteria queries -->
         <dependency>
