--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,4 +40,9 @@
 		<error-code>404</error-code>
 		<location>/index.jsf</location>
 	</error-page>
+	 <!-- 
+	 <session-config>
+        <session-timeout>60</session-timeout>
+    </session-config>
+    -->
 </web-app>
