--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
         <param-value>6LdbsxYUAAAAABKuzsIgOvEqw4Zsdef8Q6tEHN4l</param-value>
     </context-param> -->
     
-    <!-- Localhost  
+    <!-- Localhost -->
     <context-param>
         <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
         <param-value>6LeeTxQUAAAAAInP9teZ-_kAlaReoZlQxBIGSeM2</param-value>
@@ -34,8 +34,8 @@
     <context-param>
         <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
         <param-value>6LeeTxQUAAAAAJBt1_paEU248ePTD7yh6NqKT_qR</param-value>
-    </context-param> -->
-   
+    </context-param> 
+       
        <!-- 192.168.0.2
     <context-param>
         <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
@@ -46,7 +46,7 @@
         <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
         <param-value>6Lf2rBsUAAAAABxRGeHDL0k06NC6rBZIoXYxzbFK</param-value>
     </context-param>  -->
-   	  <!-- 192.168.0.11 -->
+   	  <!-- 192.168.0.11
     <context-param>
         <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
         <param-value>6LckpBsUAAAAAKMP1iusU8YO-uPY2IJvCEpZKcfN</param-value>
@@ -55,7 +55,8 @@
     <context-param>
         <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
         <param-value>6LckpBsUAAAAAP2NvR9x3oeDLyyJdy1zjUalCtqe</param-value>
-    </context-param>  
+    </context-param>   
+    -->
 	<error-page>
 	    <!-- Missing login -->
 	    <error-code>401</error-code>
